force-app/main/default/objects/sugati__Forward_Contract__c/sugati__Forward_Contract__c.object-meta.xml
<CustomObject>
    <label>Forward Contract</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Forward Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>