force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Contract_Type__c</fullName>
    <defaultValue>&quot;Forward&quot;</defaultValue>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forward</fullName>
                <default>true</default>
                <label>Forward</label>
            </value>
            <value>
                <fullName>Currency Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>