force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>