force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_Buy_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_Buy_Currency__c</fullName>
    <label>Buy Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>