force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>