force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_Quote_ID__c</fullName>
    <label>Quote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>