force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_Settlement_Date__c</fullName>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>