force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>ContractConfirmed</fullName>
                <label>Contract Confirmed</label>
            </value>
            <value>
                <fullName>ContractUnconfirmed</fullName>
                <label>Contract Unconfirmed</label>
            </value>
            <value>
                <fullName>AwaitingRecipientDetails</fullName>
                <label>Awaiting Recipient Details</label>
            </value>
            <value>
                <fullName>AwaitingFunds</fullName>
                <label>Awaiting Funds</label>
            </value>
            <value>
                <fullName>ReadyForRelease</fullName>
                <label>Ready For Release</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>SettlementMethodNotAvailable</fullName>
                <label>Settlement Method Not Available</label>
            </value>
            <value>
                <fullName>HeldInCurrencyAccount</fullName>
                <label>Held In Currency Account</label>
            </value>
            <value>
                <fullName>PaymentIssues</fullName>
                <label>Payment Issues</label>
            </value>
            <value>
                <fullName>QuoteRequired</fullName>
                <label>Quote Required</label>
            </value>
            <value>
                <fullName>ExposureLimitReached</fullName>
                <label>Exposure Limit Reached</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>