force-app/main/default/objects/sugati__Forward_Contract__c/fields/sugati__FC_XE_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>sugati__FC_XE_Contract_Reference__c</fullName>
    <externalId>true</externalId>
    <label>XE Contract Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>